--- a/veterans.html
+++ b/veterans.html
@@ -49,8 +49,8 @@
       <ul>
         <li><a href="index.html" >Home</a></li>
         <li><a href="about.html">About</a></li>
-         <li class="dropdown">
-          <a href="photographs.html"><span>Photographs</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+        <li class="dropdown">
+          <a href="photographs.html" ><span>Photographs</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="headdressesandheadgear.html">Headdresses &amp; Headgear</a></li>
             <li><a href="headdressesandheadgear.html">Clothing</a></li>
@@ -65,8 +65,8 @@
           </ul>
         </li>
     <li><a href="history.html">History </a></li>
-         <li><a href="veterans.html">Veterans </a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
+         <li><a href="veterans.html" class="active">Veterans </a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
     </nav>
@@ -77,18 +77,16 @@
 <main class="main">
 
   <!-- Page Intro -->
-<section class="photo-title-band" >
- 
-  <div class="container" data-aos='fade-up'>
-    <h1 class="photo-title">
-      Contact</h1>
-      <p class='photo-note'>Community inquiries, contributions, and research requests</p>
-  
+  <section class="photo-title-band">
+    <div class="container " data-aos="fade-up">
+      <h1 class="photo-title">
+        Veterans</h1>
+        <p class='photo-note'>Honouring service, sacrifice, and remembrance</p>
+    
     </div>
-</section>
+  </section>
 
-
-  <!-- About Content -->
+  <!-- Veterans Content -->
   <section class="section">
     <div class="container">
 
@@ -97,28 +95,31 @@
         <!-- Image -->
         <div class="col-lg-6" data-aos="fade-right">
           <img
-            src="assets/img/featured/tipi_with_people.png"
-            alt="Peepeekisis Cree community"
+            src="assets/img/veterans/veterans_hall.png"
+            alt="Peepeekisis Cree Nation Veterans"
             class="img-fluid rounded-4 border border-pee shadow-sm"
           />
         </div>
 
         <!-- Text -->
         <div class="col-lg-6" data-aos="fade-left">
-      <h2 class="text-pee-green">Get in Touch</h2>
+          <h2 class="pee-vintage text-pee-green">In Honour and Remembrance</h2>
 
-<p>
-The Peepeekisis Cree Nation Virtual Archives & Museum welcomes
-respectful inquiries related to research, education, and community
-history.
-</p>
+          <p>
+            This section recognizes members of the Peepeekisis Cree Nation who
+            served in times of war and peace, as well as the families and community
+            members who supported them.
+          </p>
 
-<p>
-If you have photographs, stories, or materials you wish to contribute,
-or if you are seeking information about the archive, please reach out
-using the contact information below.
-</p>
+          <p>
+            Veterans’ service reflects courage, responsibility, and commitment.
+            Their stories form an important part of community history and memory.
+          </p>
 
+          <p>
+            As this archive grows, photographs, records, and oral histories related
+            to Peepeekisis veterans will be preserved here with care and respect.
+          </p>
 
         </div>
       </div>
@@ -126,27 +127,30 @@ using the contact information below.
     </div>
   </section>
 
-  <!-- Treaty / Purpose Block -->
+  <!-- Veterans Purpose / Future Content -->
   <section class="section light-background">
     <div class="container">
 
       <div class="feature-grid">
 
         <div class="feature-copy">
-      <h3>Contributions & Permissions</h3>
+          <h3>Veterans Stories</h3>
 
-<p>
-Some materials may be culturally sensitive and require community review
-prior to inclusion. Submissions and requests are handled with care and
-respect for cultural protocols.
-</p>
+          <p>
+            This section will include individual veteran profiles, oral history
+            recordings, and memorial materials when they become available.
+          </p>
 
+          <p>
+            Some information may be restricted or shared only with permission,
+            in accordance with community guidance and cultural protocols.
+          </p>
         </div>
 
         <div class="feature-media">
           <img
-            src="assets/img/featured/backrest.png"
-            alt="Historic cultural artifact"
+            src="assets/img/veterans/brass_tombstone.jpeg"
+            alt="Veterans memorial or archival material"
           />
         </div>
 
@@ -155,45 +159,8 @@ respect for cultural protocols.
     </div>
   </section>
 
-  <!-- Contact Information -->
-<section class="section light-background">
-  <div class="container">
-
-    <div class="row justify-content-center">
-      <div class="col-lg-8 text-center">
-
-        <h2 class="pee-vintage text-pee-green">Contact Information</h2>
-
-        <p class="mt-3">
-          For general inquiries, research requests, or community contributions,
-          please reach out using the contact information below.
-        </p>
-
-        <div class="mt-4">
-
-          <p><strong>Peepeekisis Cree Nation No. 81</strong></p>
-
-          <p>
-            <strong>Address:</strong><br>
-            PO Box 518<br>
-            Balcarres, SK<br>
-            S0G 0C0
-          </p>
-
-          <p>
-            <strong>Phone:</strong><br>
-            (306) 334-2573
-          </p>
-
-        </div>
-
-      </div>
-    </div>
-
-  </div>
-</section>
-
 </main>
+
 
 <!-- ================= FOOTER ================= -->
   <!-- Footer -->
