--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Peepeekisis Cree Nation Virtual Archieves And Museum</title>
+  <title>Peepeekisis Cree Nation Virtual Archives And Museum</title>
   <meta name="description" content="Peepeekisis Cree Virtual Museum" />
   <meta name="keywords" content="Cree, Peepeekisis, Museum" />
 
@@ -124,18 +124,25 @@
 <body class="index-page">
 
   <!-- Header (background & nav colors are controlled in main.css overrides) -->
-<header class="header">
+<header class="header header-photo">
+  <div class="header-bg" style="background-image:url('assets/img/featured/peepeekisis_sign_from_far.jpg');"></div>
+  <div class="header-overlay"></div>
+
   <div class="container">
-   <h1 class="site-title with-flag">   
-    <a href="index.html" class="site-title-link">
-  <img
-    src="assets/img/Peepeekisis-Flag.png"
-    alt="Peepeekisis Cree Nation flag"
-    class="site-flag"
-    width="56" height="36"
-    loading="lazy" decoding="async" />
-         <span>Peepeekisis Cree Nation Virtual Archieves And Museum</span></a>
-</h1>
+ <a href="index.html" class="site-crest" aria-label="Peepeekisis Cree Nation Home">
+      <img
+        src="assets/img/Peepeekisis-Flag.png"
+        alt="Peepeekisis Cree Nation Flag"
+      />
+    </a>
+
+    <!-- Title -->
+    <h1 class="site-title">
+      <a href="index.html">
+        Peepeekisis Cree Nation Virtual Archives And Museum
+      </a>
+    </h1>
+
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
@@ -144,18 +151,19 @@
           <a href="photographs.html"><span>Photographs</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="headdressesandheadgear.html">Headdresses &amp; Headgear</a></li>
-            <li><a href="gallery.html">Clothing</a></li>
-            <li><a href="gallery.html">Footwear</a></li>
-            <li><a href="gallery.html">Jewelry &amp; Adornment</a></li>
-            <li><a href="gallery.html">Bags, Belts &amp; Sashes</a></li>
-            <li><a href="gallery.html">Ceremony, Dance &amp; Medicine</a></li>
-            <li><a href="gallery.html">Household, Travel &amp; Tools</a></li>
-            <li><a href="gallery.html">Tipis</a></li>
-            <li><a href="gallery.html">Games</a></li>
-            <li><a href="gallery.html">Community</a></li>
+            <li><a href="headdressesandheadgear.html">Clothing</a></li>
+            <li><a href="headdressesandheadgear.html">Footwear</a></li>
+            <li><a href="headdressesandheadgear.html">Jewelry &amp; Adornment</a></li>
+            <li><a href="headdressesandheadgear.html">Bags, Belts &amp; Sashes</a></li>
+            <li><a href="headdressesandheadgear.html">Ceremony, Dance &amp; Medicine</a></li>
+            <li><a href="headdressesandheadgear.html">Household, Travel &amp; Tools</a></li>
+            <li><a href="headdressesandheadgear.html">Tipis</a></li>
+            <li><a href="headdressesandheadgear.html">Games</a></li>
+            <li><a href="headdressesandheadgear.html">Community</a></li>
           </ul>
         </li>
-    <li><a href="contact.html">Oral History </a></li>
+    <li><a href="history.html">History </a></li>
+         <li><a href="veterans.html">Veterans </a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -164,41 +172,91 @@
 </header>
 
 
+<main class="main">
 
-  <main class="main">
-    <!-- Hero -->
-    <section id="hero" class="hero section flag-cross" >
+  <!-- Museum Hero -->
+  <section id="hero" class="hero section museum-hero">
+ 
 
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-9 text-center" data-aos="fade-up" data-aos-delay="100">
-              <div class="hero-text-panel">
-            <h3 style="color: var(--pee-green);">
-              File Hills Collection
-            </h3>
-            <p class="mt-3 lead">
-              Historic photographs and belongings from the
-              Smithsonian’s National Museum of the American Indian (NMAI),
-              documenting life, dress, ceremony, and community in Saskatchewan from the
-              <strong>late 1800s to the mid-1900s</strong>. Some culturally sensitive items are
-              described but not displayed out of respect.
-            </p>
-            <a href="photographs.html" class="btn-get-started" aria-label="Explore the Photo Museum gallery">
-              Explore the Collection
-            </a>
-            <small class="text-muted d-block mt-3">
-              Courtesy of the Smithsonian’s National Museum of the American Indian.
-            </small>
-            </div>
+    <div class="container">
+      <div class="hero-card" data-aos="fade-up" data-aos-delay="100">
+        
+        <h2 class="hero-title">Peepeekisis Cree Nation Virtual Archives &amp; Museum</h2>
+
+        <p class="hero-lede">
+          Historic photographs and belongings documenting life, dress, ceremony, and community
+          from the late 1800s to the mid-1900s. Some culturally sensitive items are described but not displayed.
+        </p>
+
+        <div class="hero-actions">
+          <a class="btn btn-primary btn-hero" href="photographs.html">Explore Photographs</a>
+          <a class="btn btn-outline btn-hero" href="oral-history.html">Explore Our History</a>
+        </div>
+
+   
+      </div>
+    </div>
+  </section>
+
+  <!-- Quick Paths -->
+  <section class="section museum-tiles">
+    <div class="container">
+
+      <div class="section-head">
+        <h3>Begin Exploring</h3>
+        <p>Browse by theme, or jump straight into the archive.</p>
+      </div>
+
+      <div class="tile-grid">
+        <a class="tile" href="photographs.html">
+          <img src="assets/img/featured/backrest.png" alt="Gallery">
+          <div class="tile-body">
+            <h4>Gallery</h4>
+            <p>Ceremony, identity, and artistry.</p>
           </div>
+        </a>
+
+        <a class="tile" href="gallery.html">
+          <img src="assets/img/featured/tipi_with_people.png" alt="History">
+          <div class="tile-body">
+            <h4>History</h4>
+            <p>Our history, our story.</p>
+          </div>
+        </a>
+
+        <a class="tile" href="gallery.html">
+          <img src="assets/img/featured/veteran_holding_flag.jpg" alt="Veterans">
+          <div class="tile-body">
+            <h4>Veterans</h4>
+            <p>Our Modern Day Warriors</p>
+          </div>
+        </a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Featured Story -->
+  <section class="section museum-feature">
+    <div class="container">
+      <div class="feature-grid">
+        <div class="feature-media">
+          <img src="assets/img/featured/peepeekisis_sign.jpeg" alt="Featured Exhibit">
+        </div>
+
+        <div class="feature-copy">
+          <h3>Who We Are</h3>
+          <p>
+            Part of Treaty 4. This is just filler text until we decide what to put in here.
+          </p>
+          <a class="btn btn-primary" href="about.html">Read Our Story</a>
         </div>
       </div>
-    </section>
-    <!-- /Hero -->
+    </div>
+  </section>
 
-    <!-- Featured Photo (single image with side borders) -->
+</main>
 
-  </main>
 
   <!-- Footer -->
   <footer id="footer" class="footer">
