--- a/about.html
+++ b/about.html
@@ -53,10 +53,10 @@
           <a href="photographs.html"><span>Photographs</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="headdressesandheadgear.html">Headdresses &amp; Headgear</a></li>
-            <li><a href="headdressesandheadgear.html">Clothing</a></li>
-            <li><a href="headdressesandheadgear.html">Footwear</a></li>
-            <li><a href="headdressesandheadgear.html">Jewelry &amp; Adornment</a></li>
-            <li><a href="headdressesandheadgear.html">Bags, Belts &amp; Sashes</a></li>
+            <li><a href="clothing.html">Clothing</a></li>
+            <li><a href="footwear.html">Footwear</a></li>
+            <li><a href="necklaces_earrings_hair.html">Necklaces, Earrings &amp; Hair</a></li>
+            <li><a href="bands_belts_and_sashes.html">Bands, Belts &amp; Sashes</a></li>
             <li><a href="headdressesandheadgear.html">Ceremony, Dance &amp; Medicine</a></li>
             <li><a href="headdressesandheadgear.html">Household, Travel &amp; Tools</a></li>
             <li><a href="headdressesandheadgear.html">Tipis</a></li>
@@ -72,6 +72,7 @@
     </nav>
   </div>
 </header>
+
 
 <!-- ================= MAIN ================= -->
 <main class="main">
