--- a/index.html
+++ b/index.html
@@ -116,6 +116,20 @@
   text-decoration: none;
   color: inherit;
 }
+.photo-browse-head{
+  position: relative;
+  padding: 72px 0 64px;
+  background-image:
+    linear-gradient(
+      rgba(0,0,0,0.45),
+      rgba(0,0,0,0.45)
+    ),
+    url("../img/featured/backrest.png"); /* ← adjust filename if needed */
+
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
 
   
   </style>
@@ -151,10 +165,10 @@
           <a href="photographs.html"><span>Photographs</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="headdressesandheadgear.html">Headdresses &amp; Headgear</a></li>
-            <li><a href="headdressesandheadgear.html">Clothing</a></li>
-            <li><a href="headdressesandheadgear.html">Footwear</a></li>
-            <li><a href="headdressesandheadgear.html">Jewelry &amp; Adornment</a></li>
-            <li><a href="headdressesandheadgear.html">Bags, Belts &amp; Sashes</a></li>
+            <li><a href="clothing.html">Clothing</a></li>
+            <li><a href="footwear.html">Footwear</a></li>
+            <li><a href="necklaces_earrings_hair.html">Necklaces, Earrings &amp; Hair</a></li>
+            <li><a href="bands_belts_and_sashes.html">Bands, Belts &amp; Sashes</a></li>
             <li><a href="headdressesandheadgear.html">Ceremony, Dance &amp; Medicine</a></li>
             <li><a href="headdressesandheadgear.html">Household, Travel &amp; Tools</a></li>
             <li><a href="headdressesandheadgear.html">Tipis</a></li>
@@ -216,7 +230,7 @@
           </div>
         </a>
 
-        <a class="tile" href="gallery.html">
+        <a class="tile" href="history.html">
           <img src="assets/img/featured/tipi_with_people.png" alt="History">
           <div class="tile-body">
             <h4>History</h4>
@@ -224,7 +238,7 @@
           </div>
         </a>
 
-        <a class="tile" href="gallery.html">
+        <a class="tile" href="veterans.html">
           <img src="assets/img/featured/veteran_holding_flag.jpg" alt="Veterans">
           <div class="tile-body">
             <h4>Veterans</h4>
@@ -254,6 +268,28 @@
       </div>
     </div>
   </section>
+<!-- ===== Featured Video Section ===== -->
+<section class="featured-video section">
+  <div class="container">
+
+    <div class="text-center mb-4">
+      <h2 class="pee-vintage text-pee-green">Voices &amp; Memory</h2>
+      <p class="photo-note">
+        An introduction to the Peepeekisis Cree Nation and this virtual archive.
+      </p>
+    </div>
+
+    <div class="video-wrapper">
+      <iframe
+        src="https://www.youtube.com/embed/5Y9j3emoZRY"
+        title="Peepeekisis Cree Nation Video"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
+    </div>
+
+  </div>
+</section>
 
 </main>
 
