--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,24 @@
   <link href="assets/css/main.css" rel="stylesheet" />
 
   <link rel="icon" type="image/png" href="assets/img/Peepeekisis-Flag.png" />
+  <style>
+  .photo-browse-head{
+  position: relative;
+  padding: 72px 0 64px;
+  background-image:
+    linear-gradient(
+      rgba(0,0,0,0.45),
+      rgba(0,0,0,0.45)
+    ),
+    url("../img/featured/backrest.png"); /* ← adjust filename if needed */
+
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+  
+  </style>
 </head>
 
 <body class="about-page">
@@ -53,10 +71,10 @@
           <a href="photographs.html"><span>Photographs</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="headdressesandheadgear.html">Headdresses &amp; Headgear</a></li>
-            <li><a href="headdressesandheadgear.html">Clothing</a></li>
-            <li><a href="headdressesandheadgear.html">Footwear</a></li>
-            <li><a href="headdressesandheadgear.html">Jewelry &amp; Adornment</a></li>
-            <li><a href="headdressesandheadgear.html">Bags, Belts &amp; Sashes</a></li>
+            <li><a href="clothing.html">Clothing</a></li>
+            <li><a href="footwear.html">Footwear</a></li>
+            <li><a href="necklaces_earrings_hair.html">Necklaces, Earrings &amp; Hair</a></li>
+            <li><a href="bands_belts_and_sashes.html">Bands, Belts &amp; Sashes</a></li>
             <li><a href="headdressesandheadgear.html">Ceremony, Dance &amp; Medicine</a></li>
             <li><a href="headdressesandheadgear.html">Household, Travel &amp; Tools</a></li>
             <li><a href="headdressesandheadgear.html">Tipis</a></li>
