--- a/photographs.html
+++ b/photographs.html
@@ -179,6 +179,20 @@
   text-decoration: none;
   color: inherit;
 }
+       .photo-browse-head{
+  position: relative;
+  padding: 72px 0 64px;
+  background-image:
+    linear-gradient(
+      rgba(0,0,0,0.45),
+      rgba(0,0,0,0.45)
+    ),
+    url("../img/headdresses/headdress_made_of_feathers_with_animal_claws_attached.png"); /* ← adjust filename if needed */
+
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
   </style>
 </head>
 
@@ -213,10 +227,10 @@
           <a href="photographs.html" class="active"><span>Photographs</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="headdressesandheadgear.html">Headdresses &amp; Headgear</a></li>
-            <li><a href="headdressesandheadgear.html">Clothing</a></li>
-            <li><a href="headdressesandheadgear.html">Footwear</a></li>
-            <li><a href="headdressesandheadgear.html">Jewelry &amp; Adornment</a></li>
-            <li><a href="headdressesandheadgear.html">Bags, Belts &amp; Sashes</a></li>
+            <li><a href="clothing.html">Clothing</a></li>
+            <li><a href="footwear.html">Footwear</a></li>
+            <li><a href="necklaces_earrings_hair.html">Necklaces, Earrings &amp; Hair</a></li>
+            <li><a href="bands_belts_and_sashes.html">Bands, Belts &amp; Sashes</a></li>
             <li><a href="headdressesandheadgear.html">Ceremony, Dance &amp; Medicine</a></li>
             <li><a href="headdressesandheadgear.html">Household, Travel &amp; Tools</a></li>
             <li><a href="headdressesandheadgear.html">Tipis</a></li>
@@ -243,6 +257,8 @@
       Some culturally sensitive items are described but not displayed.
     </p>
   </div>
+  
+  
 </section>
 
 
@@ -283,9 +299,7 @@
     </div>
 
     <div class="gallery-links d-flex align-items-center justify-content-center">
-      <a href="assets/img/gallery/gallery-1.jpg" title="Gallery 1" class="glightbox preview-link">
-        <i class="bi bi-arrows-angle-expand"></i>
-      </a>
+
       <a href="headdressesandheadgear.html" class="details-link">
         <i class="bi bi-link-45deg"></i>
       </a>
@@ -297,13 +311,13 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/featured/clothing.png" class="img-fluid" alt="">
+              <img src="assets/img/featured/clothing.png" class="img-fluid" alt="clothing link">
                   <div class="gallery-caption-center">
       Clothing
     </div>
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-2.jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="headdressesandheadgear.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+               
+                <a href="clothing.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -315,8 +329,8 @@
       Footwear
     </div>
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-3.jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="headdressesandheadgear.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                
+                <a href="footwear.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -325,11 +339,11 @@
             <div class="gallery-item h-100">
               <img src="assets/img/featured/jewellery.png" class="img-fluid" alt="">
                   <div class="gallery-caption-center">
-      Jewelry and Adornment 
+      Necklaces, Earrings and Hair
     </div>
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-4.jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="headdressesandheadgear.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="necklaces_earrings_hair.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -338,11 +352,11 @@
             <div class="gallery-item h-100">
               <img src="assets/img/featured/belt.png" class="img-fluid" alt="">
                    <div class="gallery-caption-center">
-      Bags, Belts, and Sashes 
+      Bands, Belts, and Sashes 
     </div>
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-5.jpg" title="Gallery 5" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="headdressesandheadgear.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="bands_belts_and_sashes.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -351,7 +365,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/featured/medicine_bag.png" class="img-fluid" alt="">
                               <div class="gallery-caption-center">
-      Ceremony, Dance, and Medicine
+      Ceremony, Dance, and Bags
     </div>
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-6.jpg" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
@@ -412,29 +426,35 @@
             </div>
           </div><!-- End Gallery Item -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6">
+           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/featured/tool_firestarting_steel_with_fur_strap.png" class="img-fluid" alt="">
+              <img src="assets/img/featured/cuff.png" class="img-fluid" alt="">
+                     <div class="gallery-caption-center">
+      Armwear and Gloves
+    </div>
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-7.jpg" title="Gallery 7" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/gallery/gallery-6.jpg" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="headdressesandheadgear.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
-   <div class="col-xl-3 col-lg-4 col-md-6">
+             <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/featured/tipi_with_people.png" class="img-fluid" alt="">
+              <img src="assets/img/featured/cradle.png" class="img-fluid" alt="">
+                     <div class="gallery-caption-center">
+      Infant Items
+    </div>
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-8-2.jpg" title="Gallery 8" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/gallery/gallery-6.jpg" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="headdressesandheadgear.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div><!-- End Gallery Item -->
+          </div>
         </div>
 
       </div>
 
-    </section><!-- /Gallery Section -->
+    </section><!-- bags, breastplates, art/Gallery Section -->
 
   </main>
   <!-- Main JS File -->
